--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <img src="../imgs/rock.jpg" alt="About Me" class="img-fluid rounded">
+        <img src="./rock.jpg" alt="About Me" class="img-fluid rounded">
       </div>
       <div class="col-lg-6 d-flex align-items-center">
         <div>
@@ -86,7 +86,7 @@
     <div class="row g-4">
       <div class="col-lg-4 col-md-6">
         <div class="card">
-          <img src="../imgs/drumkit.png" class="card-img-top" alt="Project 1">
+          <img src="./drumkit.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">Drums Challenge</h5>
             <p class="card-text">Different types of buttons are been created to play different sounds from each buttons  like online drum playing kit</p>
@@ -97,7 +97,7 @@
       
       <div class="col-lg-4 col-md-6">
         <div class="card">
-          <img src="../imgs/dice.png" class="card-img-top" alt="Project 2">
+          <img src="./dice.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Dice Roller</h5>
             <p class="card-text">This project serves as a tool more like tossing a coin where with an equal probability of result is to occur.If equal number is obtained from both dices it is a draw</p>
@@ -108,7 +108,7 @@
       
       <div class="col-lg-4 col-md-6">
         <div class="card">
-          <img src="../imgs/passgen.png" class="card-img-top" alt="Project 3">
+          <img src="./passgen.png" class="card-img-top" alt="Project 3">
           <div class="card-body">
             <h5 class="card-title">Password Generator</h5>
             <p class="card-text">Generates a random password  using the selected credentials where the length of the password can be adjucted</p>
